mus: Fix shutdown crash in unified desktop mode

Bug: 806353
Change-Id: Idcbfad0da19f1ccdeabb5d6851e6d55602fdaed1